Completed Image slider for Portfolio modal. SOme bug fixing (Instead of giving an overflow to everysingle element, I just gave it to the sections in app.js to avoid issues)

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
         height: calc(100vh - 70px); //-70 px which wiil be taken by the navbar
         position: relative;
         top: 70px;
+        overflow-x: hidden;
         scroll-behavior: smooth; //scrolls it smoothly and clicking a link will go to that page smoothly
         scroll-snap-type: y mandatory;
         scrollbar-width: none; //for firefox
