--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -28,6 +28,7 @@
         justify-content: center;
         margin: 70px 20px;
         border-radius: 20px;
+        overflow: hidden;
         box-shadow: 0px 10px 50px rgb(112, 112, 112);
 
         @include mobile{
